add remote data transfer

--- a/MDK-ARM/Motor89.uvprojx
+++ b/MDK-ARM/Motor89.uvprojx
@@ -728,4 +728,13 @@
     <files/>
   </RTE>
 
+  <LayerInfo>
+    <Layers>
+      <Layer>
+        <LayName>Motor89</LayName>
+        <LayPrjMark>1</LayPrjMark>
+      </Layer>
+    </Layers>
+  </LayerInfo>
+
 </Project>
